--- a/addons/behaviour_toolkit/plugin.cfg
+++ b/addons/behaviour_toolkit/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="BehaviourToolkit"
-description=""
+description="This plugin provides a set of tools to create custom and complex behaviour in the Godot 4.x Game Engine."
 author="Pat"
 version="0.9.4"
 script="plugin.gd"
