--- a/.github/workflows/gdscript-formatter.yml
+++ b/.github/workflows/gdscript-formatter.yml
@@ -3,11 +3,7 @@
 
 name: GDScript Formatter
 
-on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+on: workflow_dispatch
 
 jobs:
   build:
