--- a/.github/workflows/gdscript-formatter.yml
+++ b/.github/workflows/gdscript-formatter.yml
@@ -10,16 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout 
+      uses: actions/checkout@v2
+    
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip3 install "gdtoolkit==4.*"
+      
     - name: Format with GDToolkit
       run: |
         # Format all files in the repository
         gdformat .
+    
+    - name: Commit changes
+      run: |
+        git config --local user.email "${{ secrets.OWNER_USERNAME }}"
+        git config --local user.name "${{ secrets.OWNER_MAIL }}"
+
+        git add -A
+        git commit -m "Format GDScript files with GDToolkit"
+        git push
