--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -15,10 +15,13 @@ jobs:
 
       - name: Copy specific folder to submodule branch
         run: |
+          git config --local user.email "${{ secrets.OWNER_MAIL }}"
+          git config --local user.name "${{ secrets.OWNER_USERNAME }}"
           git checkout submodule
           git rm -r --cached .
           git checkout main -- addons/behaviour_toolkit
           mv addons/behaviour_toolkit* .
+          git checkout submodule
           git add .
           git commit -m "Update submodule with changes from main"
-          git push origin submodule
+          git push
