--- a/.github/workflows/update_submodule.yml
+++ b/.github/workflows/update_submodule.yml
@@ -13,14 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Git
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+
+      - name: Create or fetch submodule branch
+        run: git fetch origin submodule:submodule || git checkout -b submodule origin/submodule
+
       - name: Copy specific folder to submodule branch
         run: |
-          git config --local user.email "${{ secrets.OWNER_MAIL }}"
-          git config --local user.name "${{ secrets.OWNER_USERNAME }}"
           git checkout submodule
           git rm -r --cached .
           git checkout main -- addons/behaviour_toolkit
           mv addons/behaviour_toolkit/* .
           git add .
           git commit -m "Update submodule with changes from main"
-          git push
+          git push origin submodule
