--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -34,6 +34,7 @@ jobs:
         git rm -r addons/behaviour_toolkit
 
     - name: Commit to Submodule
+      continue-on-error: true
       run: |
         git add -A
         git commit -am "Updated Submodule from Main"
